2002-04-10  Chris Armstrong  <carmstro@twistedmatrix.com>

	* twisted/reality: Gone. This is now in a completely separate plugin
	package.
	
2002-04-09  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

        * win32 process support seems to *finally* be working correctly. Many
        thanks to Drew Whitehouse for help with testing and debugging.

2002-04-08  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

        * coil refactored yet again, this time to use components and adapters.
        The design is now much cleaner.

2002-04-08  Glyph Lefkowitz  <glyph@zelda.twistedmatrix.com>

	* twisted/spread/jelly.py: Refactored jelly to provide (a) more
	sane, language-portable API for efficient extensibility and (b)
	final version of "wire" protocol.  This should be very close to
	the last wire-protocol-breaking change to PB before
	standardization happens.

2002-04-04  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* Removed __getattr__ backwards compatibility in PB

2002-04-03  Chris Armstrong  <carmstro@twistedmatrix.com>

	* twisted/python/usage.py, twisted/test/test_usage.py, bin/mktap, twisted/tap/*.py:
	Made the usage.Options interface better -- options are now stored in the
	'opts' dict. This is backwards compatible, and I added a deprecation warning.

2002-04-01  Chris Armstrong  <carmstro@twistedmatrix.com>

	* .: Releasing Twisted 0.16.0.

2002-03-29  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

	* Added Qt event loop support, written by Sirtaj Singh Kang and
	Aleksandar Erkalovic.

2002-03-29  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

	* Added a 'coil' command for configuring TAP files

2002-03-15  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

	* XML-RPC published methods can now return Deferreds, and Twisted
	will Do The Right Thing.

2002-03-13  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

	* Refactored coil, the configuration mechanism for Twisted.