@@ -1,5 +1,10 @@
 2002-04-10  Chris Armstrong  <carmstro@twistedmatrix.com>
 
+	* twisted/protocols/irc.py: Some fix-ups to IRCClient and
+	DccFileReceive, from Joe Jordan (psy).
+
+2002-04-10  Chris Armstrong  <carmstro@twistedmatrix.com>
+
 	* twisted/reality: Gone. This is now in a completely separate plugin
 	package.
 	
